--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.6",
     "cookies-next": "^2.1.1",
     "iron-session": "^6.2.1",
+    "material-icons": "^1.11.11",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
