--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,18 @@
     "@popperjs/core": "^2.11.6",
     "cookies-next": "^2.1.1",
     "iron-session": "^6.2.1",
+    "leaflet": "^1.9.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "material-icons": "^1.11.11",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.1.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.8.0",
     "@types/node": "18.7.20",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
